GEE logistic update knitted

--- a/40_example_gee_Respiratory.Rmd
+++ b/40_example_gee_Respiratory.Rmd
@@ -384,9 +384,9 @@ texreg::htmlreg(list(resp_gee_ex,
                                      include.nobs = FALSE)),
                 custom.model.names = c("b (SE)", 
                                        "OR [95% CI]"),
-                custom.coef.map = list(centre2 = "Center 2",
-                                       sexmale = "Male",
-                                       BL_statusgood = "Good at BL",
+                custom.coef.map = list(centre2 = "Center 2 vs. 1",
+                                       sexmale = "Male vs. Female",
+                                       BL_statusgood = "BL Good vs. Poor",
                                        "I(age - 33)" = "Age (Yrs post 33)",
                                        "I((age - 33)^2)" = "Age-Squared",
                                        treatmenttreatment = "Treatment"), 
